--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,13 +9,14 @@ buildscript {
 
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.google.gms:google-services:4.3.15'
     }
 }
 plugins {
   // ...
 
   // Add the dependency for the Google services Gradle plugin
-  id 'com.google.gms.google-services' version '4.4.1' apply false
+//   id 'com.google.gms.google-services' version '4.4.1' apply false
 
 }
 
