--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   flutter_sms_inbox: ^1.0.3
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
+  google_sign_in: ^6.2.1
+  sign_in_button: ^3.2.0
+  cloud_firestore: ^4.15.4
+  intl: ^0.19.0
+
 
 dev_dependencies:
   flutter_test:
