--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -70,4 +70,7 @@ flutter {
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:32.7.2')
     implementation 'com.google.firebase:firebase-analytics'
+    // implementation 'com.google.android.gms:play-services-location:21.1.0'
+    // implementation 'com.google.android.gms:play-services-auth:19.2.0' // Example dependency, use the appropriate one for your needs
+
 }
