--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sign_in_button: ^3.2.0
   cloud_firestore: ^4.15.4
   intl: ^0.19.0
+  firebase_phone_auth_handler: ^1.0.8
 
 
 dev_dependencies:
