--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.15.4
   intl: ^0.19.0
   firebase_phone_auth_handler: ^1.0.8
+  http: ^1.2.0
 
 
 dev_dependencies:
